  - web services API ver 2.0  artifact deployed on public
    maven repository 


2012/03/09 BETA-0.84
  - GUI updates:
      - publication manager updates:
         - implemented browsing history 
         - implemented sorting by:
             - publication (ie author)
             - pmid
             - IMEx accession
             - date
             - record owner
      - updated location of the recaptcha server

2012/04/11 BETA-0.85
   - GUI updates:
      - publication manager updates:
          - show/hide columns
      - publication search
          - search by pmid/imex/doi/jint identifiers supported
   - guard against dysfunctional NML service added

  - initial implementation of PSICQUIC server added
  
  
2012/05/09 BETA-0.86
  - GUI updates:
      - user editor action fix
      - web services updates:
          - ACL-based access control added (ws-v2.0)
          - publication record returns all identifiers
                                    
      - PSICQUIC server updates


2012/07/24 BETA-0.87
  - GUI updates:
      - implemented record tabs history


2012/09/13 BETA-0.88
  - GUI updates:
      -added links from the statistics page

  - PSICQUIC server code moved into separate project


2013/02/05 BETA-0.89

  - completed implementation of ACL control at the 'target' level

  - GUI updates:
     - overhaul of new record page and record editor layout
     - record editor:
          - implemented functionality of the data attachment tab
     - CSS cleanup

  - help pages added


2013/04/07 BETA-0.90

  - user account customization:
     - publication watch list
     - automatic watch list generation
     - mail notifications

  - GUI updates:
     - user preferences and watch list pages added
     - record editor:
         - watch status tab added

  - help pages updates 
    
  
2013/08/05 BETA-0.91

  - user account customization:
      - attachment mail notifications

  - GUI updates:
      - minor page reorganization