@@ -147,3 +147,10 @@ $Id$
 
   - GUI updates:
       - minor page reorganization
+
+
+2013/08/05 BETA-0.92
+
+  - user account customization:
+      - more configuration options added
+
